# domeneshop_client

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  publish.yml  rust.yml
src/: client.rs  error_mapping.rs  errors.rs  helpers.rs  http.rs  lib.rs
src/endpoints/: dns.rs  domains.rs  dyndns.rs  forwards.rs  invoices.rs
src/http_client/: mock.rs  reqwest.rs
tests/: dns.rs  domains.rs  dyndns.rs  forwards.rs  invoices.rs
tests/common/: mod.rs
