[package]
name = "domeneshop_client"
description = "Rust wrappers around Domeneshop's API"
version = "0.1.0"
edition = "2021"
keywords = ["sdk", "domeneshop"]
categories = ["api-bindings"]
repository = "https://github.com/arthyon/domeneshop_client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = {version = "1.0.163", features = ["derive"]}
