[package]
name = "domeneshop_client"
description = "Rust wrappers around Domeneshop's API"
version = "0.1.0"
edition = "2021"
keywords = ["sdk", "domeneshop"]
categories = ["api-bindings"]
repository = "https://github.com/arthyon/domeneshop_client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
base64 = "0.21.2"
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
false = "0.0.0"
http-types = "2.12.0"
reqwest = { version = "0.11.18", optional = true }
serde = {version = "1.0.163", features = ["derive"]}
url = "2.4.0"
serde_json = "1.0.103"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["macros"]}
tokio-test = "0.4.2"
futures = { version = "0.3.28", features = ["executor"] }

[features]
default = ["reqwest"]
mock = []
