[package]
name = "domeneshop_client"
authors = ["Christian Hochlin"]
description = "Bindings for Domeneshop's API"
license = "MIT"
readme = "README.md"
version = "0.1.0"
edition = "2021"
keywords = ["sdk", "domeneshop"]
categories = ["api-bindings"]
repository = "https://github.com/arthyon/domeneshop_client"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = "0.1.72"
base64 = "0.21.2"
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
http-types = "2.12.0"
reqwest = { version = "0.11.18", optional = true }
serde = {version = "1.0.178", features = ["derive"]}
url = "2.4.0"
serde_json = "1.0.104"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["macros"]}
tokio-test = "0.4.2"

[features]
default = ["reqwest"]
mock = []
